# cpp_chip8_course_code

./: CMakeLists.txt  README.md
main/: Main.cpp
src/: Application.h  Bus.cpp  Bus.h  CPU.cpp  CPU.h  Chip8.cpp  Chip8.h  Config.h  Constants.h  DelayTimer.h  Disassembler.cpp  Disassembler.h  Display.h  Emulator.cpp  Emulator.h  IWidget.h  Instruction.cpp  Instruction.h  InstructionPatternId.cpp  InstructionPatternId.h  InstructionSet.cpp  InstructionSet.h  Keypad.h  Main.cpp  OpcodeId.cpp  OpcodeId.h  OpcodePatternId.cpp  OpcodePatternId.h  OpcodePatternTable.cpp  OpcodePatternTable.h  RAM.cpp  RAM.h  RomManager.h  StepResult.h  UIStyle.h  Utils.cpp  Utils.h  WidgetDecorators.h  WidgetFrame.h
src/Application/: Application.h  ApplicationController.h  RandomProvider.cpp  RandomProvider.h  RomLoader.h  Strings.h  TextSpinner.h  Timer.h
src/Interfaces/: IKeyInputProvider.h  IRandomProvider.h  IRomLoader.h  IUIManager.h  IWidget.h
src/Interpreter/: Bus.h  Interpreter.cpp  Interpreter.h
src/Interpreter/Hardware/: CPU.cpp  CPU.h  CPUState.h  Display.h  Keypad.h  RAM.cpp  RAM.h
src/Interpreter/Instruction/: Instruction.cpp  Instruction.h  OpcodeId.h  OpcodeTable.cpp  OpcodeTable.h
src/Interpreter/Snapshot/: Snapshot.h  SnapshotBuilder.cpp  SnapshotBuilder.h
src/Platform/Olc/: OlcDefinitions.cpp  OlcKeyInputProvider.h  OlcVec.h
src/Types/: Commands.h  ExecutionState.h  ExecutionStatus.h  FetchResult.h  IntVec2.h  StepResult.h
src/UI/: UIManager.h  UITheme.h  ViewModel.h
src/UI/Layout/: FramedWidgetBase.h  LayoutHelpers.cpp  LayoutHelpers.h
src/UI/Widgets/: ControlsWidget.h  DisplayWidget.h  InstructionWidget.h  KeypadWidget.h  MemoryWidget.h  NotificationWidget.h  RegisterWidget.h  RomListWidget.h  StackWidget.h
src/Utils/: TextUtils.cpp  TextUtils.h
src/core/: Application.cpp  Application.h  Bus.h  CPU.cpp  CPU.h  Common.h  Config.h  Display.h  EmulationStatus.h  Emulator.cpp  Emulator.h  ExecutionStatus.h  Instruction.h  OpcodeFormatMap.cpp  OpcodeFormatMap.h  OpcodeFormatTable.cpp  OpcodeFormatTable.h  OpcodeId.cpp  OpcodeId.h  OpcodePatternId.cpp  OpcodePatternId.h  OpcodePatternTable.cpp  OpcodePatternTable.h  OpcodeTable.cpp  OpcodeTable.h  RAM.cpp  RAM.h  RomManager.cpp  RomManager.h  SoundTimer.h  UIStyle.h  Utils.cpp  Utils.h  WidgetDecorators.h
tests/: ApplicationControllerTests.cpp  CPUOpcodeTests.cpp  OpcodeTableTests.cpp  OpcodeTests.cpp
